DONE: Fix the overflow

--- a/src/shared/footer/Footer.scss
+++ b/src/shared/footer/Footer.scss
@@ -1,22 +1,13 @@
 footer {
- /*   left: 0;
+    left: 0;
     bottom: 0;
     width: 100%;
-    padding: 20px;
-    position: absolute;
-    color: #FFFFFF;
-    text-align: center !important;
-*/
-    left: 0;
-    margin-top: 32vh;
     height: 80px;
-    /* bottom: -274px; */
-    width: 100%;
     padding: 20px;
-    position: relative;
     color: #FFFFFF;
+    margin-top: 32vh;
+    position: absolute;
     text-align: center !important;
-
 
     a {
         color: #FFFFFF;
